TICKET-T-7005: Custom Catalog configurations improvements
Signed-off-by: Guru-cm-here <120634061+Guru-cm-here@users.noreply.github.com>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -95,6 +95,10 @@
   "@catalogErrorMessage":  {
     "description": "Message text shown when a catalog configuration already exists"
   },
+  "catalogHrnErrorMessage": "Please specify at least the HERE resource name (HRN) to proceed",
+  "@catalogHrnErrorMessage":  {
+    "description": "Catalog Hrn empty error message"
+  },
   "clearAll": "Clear All",
   "@clearAll": {
     "description": "Text for clear all action"
