TICKET-T-7005: Custom Catalog configurations improvements
Signed-off-by: Guru-cm-here <120634061+Guru-cm-here@users.noreply.github.com>

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1321,6 +1321,10 @@
   "@hrnAsStringHint": {
     "description": "Text hint for hrn as string"
   },
+  "hrnTitle": "HERE Resource Name (HRN)",
+  "@hrnTitle": {
+    "description": "HRN title text"
+  },
   "ignoreCachedData": "Ignore Cached Data",
   "@ignoreCachedData": {
     "description": "Title text for ignore cached data option"
